--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,60 +1,119 @@
 .about__container {
   display: flex;
   place-content: center;
-  height: 100%;
+  height: 30rem;
   z-index: 1;
   max-width: 100%;
   background: #445f5c;
+  padding: 1.5rem;
+}
+
+@media screen and (max-width: 1440px) {
+  .about__container {
+    height: 28rem;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about__container {
+    height: 28rem;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about__container {
+    height: 26rem;
+    padding: 1rem;
+  }
+}
+@media screen and (max-width: 425px) {
+  .about__container {
+    height: 42rem;
+    padding: 1rem;
+  }
+}
+@media screen and (max-width: 375px) {
+  .about__container {
+    height: 60rem;
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .about__container {
+    height: 62rem;
+    padding: 1rem;
+  }
 }
 
 .about__wrapper {
   display: flex;
   width: 100%;
   position: relative;
+  padding: 0 30px;
+  padding-top: 1rem;
+}
+@media screen and (max-width: 320px) {
+  .about__wrapper {
+    padding: 0 10px;
+  }
 }
 
 .about__h1 {
   font-family: "Archivo", sans-serif;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
   text-transform: uppercase;
   font-size: 1.5rem;
   color: #89a097;
-  padding: 1.8rem;
+  padding: 1rem;
+  padding-top: 3rem;
 }
-hr {
-  color: #f4f4f4;
+@media screen and (max-width: 1024px) {
+  .about__h1 {
+    font-size: 1.5rem;
+    padding-top: 3.5rem;
+  }
 }
 @media screen and (max-width: 768px) {
   .about__h1 {
     font-size: 1.5rem;
+    padding-top: 1rem;
   }
 }
 @media screen and (max-width: 480px) {
   .about__h1 {
     font-size: 1.55rem;
+    padding-top: 1rem;
   }
 }
-.pp__info {
-  padding: 2rem;
+hr {
   color: #f4f4f4;
-  /* From https://css.glass */
+}
+
+.pp__info {
+  padding: 1.5rem;
+  color: #f4f4f4;
   background: rgba(145, 163, 155, 0.21);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(11.8px);
   -webkit-backdrop-filter: blur(11.8px);
   border: 1px solid rgba(145, 163, 155, 0.3);
   margin-left: 2rem;
   opacity: 80%;
+  padding-left: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .col-1 {
   width: 50%;
   justify-content: flex-end;
+  height: 100%;
 }
 .col-2 {
   justify-content: flex-start;
-  padding: 2rem;
   width: 50%;
   margin-left: -20px;
+  height: 100%;
 }
