--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100px;
+  height: 6rem;
   align-items: center;
   z-index: 1;
   width: 100%;
-  background-color: #131313;
+  background-color: #445f5c;
 }
 .footer__wrapper {
   margin: 0 auto;
@@ -20,8 +20,8 @@
 
 .footer__link {
   color: #f4f4f4;
-  padding: 1rem;
   text-decoration: none;
+  padding-top: 2.5rem;
 }
 .footer__link:hover {
   text-decoration: underline 3px solid #91a39b;
@@ -37,4 +37,5 @@
   color: #f4f4f4;
   font-size: x-small;
   text-align: center;
+  padding: 1rem;
 }
