--- a/src/components/Plants/Plants.css
+++ b/src/components/Plants/Plants.css
@@ -1,19 +1,48 @@
 /* plant container */
 
 .plants__container {
-  height: 100%;
+  height: 900px;
   display: grid;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background-image: url("https://images.pexels.com/photos/213727/pexels-photo-213727.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  background-image: url("../../images/bg.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
   flex-flow: row wrap;
+  max-width: 100%;
+  object-fit: contain;
+}
+@supports (-webkit-overflow-scrolling: touch) {
+  .plants__container {
+    background-attachment: scroll;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .plants__container {
+    height: 900px;
+    object-fit: contain;
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .plants__container {
+    height: 52rem;
+    object-fit: contain;
+    max-width: 100%;
+    padding: 0 30px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .plants__container {
+    height: 94rem;
+    object-fit: contain;
+    max-width: 100%;
+    padding: 1rem;
+  }
 }
 
 .plant__wrapper {
