--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,7 @@
 .about__container {
   display: flex;
   place-content: center;
-  height: 30rem;
+  height: 100%;
   z-index: 1;
   max-width: 100%;
   background: #445f5c;
