--- a/src/components/Process/Process.css
+++ b/src/components/Process/Process.css
@@ -83,6 +83,8 @@
   .process {
     grid-template-columns: 1fr;
     padding: 1rem;
+    width: 14em;
+    height: 14em;
   }
 }
 
@@ -160,9 +162,38 @@
 .info {
   color: #131313;
   max-width: 100%;
-  font-size: 1rem;
+  font-size: 1.2rem;
   width: -moz-fit-content;
   block-size: fit-content;
   border-radius: 50%;
   padding: 0 30px;
+}
+@media screen and (max-width: 1024px) {
+  .info {
+    font-size: 1.1rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .info {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .info {
+    font-size: 1.1rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .info {
+    font-size: 1.1rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .info {
+    font-size: 1rem;
+  }
 }
